--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
 </head>
 
 <body>
-    <header>
+    <header class="cabeçalho">
         <h1>
             Espaço destinado ao compartilhamento de alguns
-            vídeos sobre matemática básica
+            vídeos sobre matemática básica - Prof. Washington
         </h1>
-
     </header>
-    <section>
+
+    <section class="sectiondeabertura">
+        <div class="abertura">
+            <h2>Questão Fuvest 2022 - 1º Fase</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mEGcFwOP5vg?si=-EtnRy7R_okvPzxx" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section class="primeira-section">
         <p>
             Conjuntos numéricos
         </p>
@@ -78,19 +88,7 @@
             <a href="https://www.youtube.com/watch?v=frO5hvc4UKo&list=PLDfX530Eg1VtgSMHXawbVOcdr8vqc1qO1&index=6">
                 <img src="https://img.youtube.com/vi/frO5hvc4UKo/0.jpg" />
             </a>
-
-            
-
-
         </div>
-
-
-
-        
     </section>
-
-
-
 </body>
-
 </html>
