--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <section class="sectiondeabertura">
         <div class="abertura">
             <h2>Questão Fuvest 2022 - 1º Fase</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/mEGcFwOP5vg?si=-EtnRy7R_okvPzxx" 
-            title="YouTube video player" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mEGcFwOP5vg?si=-EtnRy7R_okvPzxx"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
@@ -90,5 +90,33 @@
             </a>
         </div>
     </section>
+
+    <section class="terceira-section">
+        <p>
+            Ângulos e polígonos
+        </p>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=_r8043qhwEc&list=PLDfX530Eg1VsLbDZvS5YEzeAR2AnYzosK&index=3">
+                <img src="https://img.youtube.com/vi/_r8043qhwEc/0.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=ZdYJD3OGLD4&list=PLDfX530Eg1VsLbDZvS5YEzeAR2AnYzosK&index=4">
+                <img src="https://img.youtube.com/vi/ZdYJD3OGLD4/0.jpg" />
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=7RQfsR5TiS0&list=PLDfX530Eg1VsLbDZvS5YEzeAR2AnYzosK&index=5">
+                <img src="https://img.youtube.com/vi/7RQfsR5TiS0/0.jpg" />
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=xLfr7aDIz0A&list=PLDfX530Eg1VsLbDZvS5YEzeAR2AnYzosK&index=2">
+                <img src="https://img.youtube.com/vi/xLfr7aDIz0A/0.jpg" />
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=Cw45Ue87hi0&list=PLDfX530Eg1VsLbDZvS5YEzeAR2AnYzosK&index=1">
+                <img src="https://img.youtube.com/vi/Cw45Ue87hi0/0.jpg" />
+            </a>
+
+        </div>
+    </section>
 </body>
+
 </html>
